# template-project

./: .env.example  .env.example.jinja  .gitignore  AGENTS.md  AGENTS.md.jinja  LICENSE  LICENSE.jinja  README.md  copier.yml  pyproject.toml
config/: __init__.py  logger.py  settings.py
licenses/: APACHE.jinja  CC0.jinja  EULA.jinja  MIT.jinja
scripts/: setup_project.py
src/template_project/: __init__.py  cli.py  settings.py
src/{{ package_name }}/: __init__.py.jinja  cli.py  logging.py.jinja  settings.py.jinja
template/: .cursorignore  .env.development.jinja  .env.example.jinja  .env.jinja  .env.production.jinja  .env.staging.jinja  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  {% if code_assistant == 'cursor' %}.cursorignore{% else %}.ignore{% endif %}  {% if license and license != 'None' %}LICENSE{% endif %}.jinja
template/.claude/: settings.json
template/licenses/: APACHE.jinja  CC0.jinja  EULA.jinja
template/scripts/: setup_project.py.jinja
template/src/{{ package_name }}/: __init__.py.jinja  cli.py.jinja  logging.py.jinja  settings.py.jinja
template/tests/: conftest.py.jinja
tests/: conftest.py  conftest.py.jinja
