[project]
name = "template-project"
version = "0.1.0"
description = "A modern Python template project following best practices"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "seblful", email = "alesha.chimba@gmail.com" }
]
maintainers = [
    { name = "seblful", email = "alesha.chimba@gmail.com" }
]
keywords = ["template", "python", "best-practices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "ty>=0.0.28",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
template-project = "template_project.cli:main"

[project.urls]
Homepage = "https://github.com/seblful/template-project"
Documentation = "https://github.com/seblful/template-project#readme"
Repository = "https://github.com/seblful/template-project.git"
Issues = "https://github.com/seblful/template-project/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_project"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]